--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #272727;
+  --foreground: #ededed;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #272727;
     --foreground: #ededed;
   }
 }
@@ -18,4 +18,46 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.hexagon-wrap {
+  filter: drop-shadow(3px 5px 3px rgba(241, 241, 241, 0.1));
+}
+.hexagon {
+  width: 97px;
+  height: 97px;
+  background-color: rgb(245 158 11); /* Color del hexágono */
+  background: linear-gradient(300deg, rgb(245, 158, 11), rgb(165, 128, 101)); /*  /* Vertical gradient */
+  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  transition: transform 1s;
+  
+}
+
+.hexagon-content {
+  font-size: 3rem;
+  position: relative;
+  transition: transform 1s;
+  
+}
+
+@media (max-width: 600px) {
+  .hexagon {
+    width: 80px;
+    height: 80px;
+  }
+
+  .hexagon-content {
+    font-size: 2rem;
+  }
+  .information {
+    line-height: 5px;
+  }
+}
+
+.information {
+  filter: none;
 }
